# meltan

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  meltan_ble.txt
.github/workflows/: doxygen.yml
components/altavoz/: CMakeLists.txt  altavoz.c
components/comunicacion/: CMakeLists.txt
components/ledRGB/: CMakeLists.txt
components/ledRGB/include/: ledRGB.h
components/motor/: motor.c
components/palanca/: CMakeLists.txt
main/: CMakeLists.txt  comunicacion.c  ledRGB.c  palanca.c
main/include/: altavoz.h  comunicacion.h  motor.h  palanca.h
tests/: queMAC.c  testBLE.c  testMotor.c
tests/queMAC/: CMakeLists.txt
tests/queMAC/main/: CMakeLists.txt
tests/testAltavoz/: CMakeLists.txt  sdkconfig.defaults
tests/testAltavoz/main/: CMakeLists.txt  testAltavoz.c
tests/testBLE/: CMakeLists.txt
tests/testBLE/main/: CMakeLists.txt
tests/testESPNOW/: CMakeLists.txt
tests/testESPNOW/main/: CMakeLists.txt  testESPNOW.c
tests/testMotor/: CMakeLists.txt
tests/testMotor/main/: CMakeLists.txt
tests/testPalanca/: CMakeLists.txt
tests/testPalanca/main/: CMakeLists.txt  testPalanca.c
tests/testRGB/: CMakeLists.txt
tests/testRGB/main/: CMakeLists.txt  testRGB.c
tests/testSistema/: CMakeLists.txt  sdkconfig.defaults
tests/testSistema/main/: CMakeLists.txt  testSistema.c
